--- a/_includes/benefits.html
+++ b/_includes/benefits.html
@@ -13,7 +13,7 @@
 
       <div class="col-xs-12 col-sm-4 mv2 mv3-ns">
         <article class="center bg-white pa3 pa4-ns ba b--black-10 h-100">
-          <h1 class="f4 mt0">Groups of all sizes</h1>
+          <h1 class="f4 mt0">Groups of any size</h1>
           <hr class="mw3 ml0 ba bw1 b--orange">
           <p class="lh-copy measure center f6 black-70">
             The typical escape room has a limited capacity which can only fit a few people at a time. We have a flexible experience for groups of all sizes.
