--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,11 @@
-<footer class="bg-near-black white pt4 pb5" role="contentinfo">
+<footer class="bg-near-black white pv4" role="contentinfo">
   <div class="container-fluid">
-    <div class="row center-xs">
-      <div class="col-xs-12">
-        <p class="mb0 tc">&copy; {{ site.time | date: '%Y' }} {{ site.author }}. All rights reserved.</p>
-      </div>
-    </div>
+    <p class="f6 lh-copy mv0">
+      Escape On Demand<br>
+      (702) 555-5555<br>
+      <a href="mailto:events@escapeondemand.com" class="link white">events@escapeondemand.com</a>
+    </p>
+
+    <p class="f6 lh-copy mv0">&copy; {{ site.time | date: '%Y' }} {{ site.author }}</p>
   </div>
 </footer>
