--- a/_layouts/room.html
+++ b/_layouts/room.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section class="overflow-hidden room cover {% cycle 'room--odd', 'room--even' %}" style="background-image: url({{ site.base_url }}/assets/img/{{ page.image }})">
+<section class="overflow-hidden room cover {% cycle 'room--odd', 'room--even' %}" style="background-image: url({{ site.base_url }}/assets/img/rooms/{{ page.image }})">
   <div class="container-fluid pv6 bg-black-40 vh-75">
     <div class="w-50-l">
       <h2 class="f3 lh-copy white">{{ page.teaser }}</h2>
