--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
 <meta name="author" content="{{ site.author }}">
 <meta name="theme-color" content="#3C3E55">
 <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
+<link rel="icon" href="{{ site.baseurl }}/assets/img/favicon_32x32.png" sizes="32x32" type="image/png">
 
 {% if jekyll.environment == "production" %}
   {% include analytics.html %}
