--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,17 @@
 <header id="header" class="sans-serif fixed-ns top-0 w-100 bg-white shadow-1 z-max">
-  <div class="cover bg-left bg-center-l" style="background-image: url(http://mrmrs.io/photos/u/011.jpg)">
-    <div class="container-fluid">
-      <nav class="dt w-100">
-        <div class="dtc w2 v-mid pv1 pr2">
-          <a href="{{ site.baseurl }}/" class="dib w-logo border-box" title="Back to Homepage">
-            <img src="{{ site.logo }}" class="img-responsive" alt="Escape On Demand logo">
-            <span class="dn link white-90 hover-white">Escape On Demand</span>
-          </a>
-        </div>
-        <div class="dtc v-mid tr pv2 pl2">
-          <a class="f6 fw4 hover-black no-underline black-70 dn dib-ns pv2 ph3 {% if page.slug == 'team-building' %}black{% endif %}" href="{{ site.base_url }}/team-building/">Team Building</a>
-          <a class="f6 fw4 hover-black no-underline black-70 dn dib-ns pv2 ph3 {% if page.slug == 'rooms' %}black{% endif %}" href="{{ site.base_url }}/rooms/">Rooms</a>
-          <a class="f6 fw4 hover-black no-underline black-70 dn dib-ns pv2 ph3 {% if page.slug == 'contact' %}black{% endif %}" href="{{ site.base_url }}/contact/">Book Now</a>
-        </div>
-      </nav>
-    </div>
+  <div class="container-fluid">
+    <nav class="dt w-100">
+      <div class="dtc w2 v-mid pv2 pr2">
+        <a href="{{ site.baseurl }}/" class="dib w4 border-box bg-white" title="Back to Homepage">
+          <img src="{{ site.logo }}" class="img-responsive" alt="Escape On Demand logo">
+          <span class="dn link white-90 hover-white">Escape On Demand</span>
+        </a>
+      </div>
+      <div class="dtc v-mid tr pv2 pl2">
+        <a class="f6 fw4 hover-black no-underline black-70 dn dib-ns pv2 ph3 {% if page.slug == 'team-building' %}black{% endif %}" href="{{ site.base_url }}/team-building/">Team Building</a>
+        <a class="f6 fw4 hover-black no-underline black-70 dn dib-ns pv2 ph3 {% if page.slug == 'rooms' %}black{% endif %}" href="{{ site.base_url }}/rooms/">Rooms</a>
+        <a class="f6 fw4 hover-black no-underline black-70 dn dib-ns pv2 ph3 {% if page.slug == 'contact' %}black{% endif %}" href="{{ site.base_url }}/contact/">Book Now</a>
+      </div>
+    </nav>
   </div>
 </header>
