--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -2,7 +2,7 @@
 <div class="cover bg-top bg-near-black" style="background-image: url({{ site.base_url }}/assets/img/pexels-photo-355988.jpg)">
   <div class="bg-black-80 pb5 pb6-ns pb7-l">
     <div class="container-fluid tc-l pt4 pt5-ns pt6-l">
-      <h1 class="f2 f1-l fw2 white-90 mb0 lh-title">Escape rooms brought directly to your corporate event</h1>
+      <h1 class="f2 f1-l fw2 white-90 mb0 lh-title">Escape rooms brought directly to your corporate event.</h1>
       <h2 class="fw1 f3 white-80 mt3 mb4">It takes less than 60 minutes to break down barriers, build trust and bring your team together.</h2>
       <a class="f6 lh-solid no-underline grow dib v-mid bg-orange white ba b--orange ph3 pv3 mb3" href="/team-building/">Discover the benefits</a>
     </div>
