Add all content

--- a/_includes/benefits.html
+++ b/_includes/benefits.html
@@ -6,7 +6,7 @@
           <h1 class="f4 mt0">Team Building</h1>
           <hr class="mw3 ml0 ba bw1 b--orange">
           <p class="lh-copy measure center f6 black-70">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus vitae rem similique iusto repudiandae fuga culpa provident cum animi tempore sunt ea sit, facilis ut illum natus, pariatur alias quae!
+            Employees learn to work together more effectively and increase productivity. Boost team confidence and trust, increasing motivation in the workplace. Out-of-the-ordinary tasks will encourage creativity and foster problem solving that can help identify and overcome barriers to goals on the job.
           </p>
         </article>
       </div>
@@ -16,7 +16,7 @@
           <h1 class="f4 mt0">Groups of any size</h1>
           <hr class="mw3 ml0 ba bw1 b--orange">
           <p class="lh-copy measure center f6 black-70">
-            The typical escape room has a limited capacity which can only fit a few people at a time. We have a flexible experience for groups of all sizes.
+            The typical escape room has a limited capacity which can only cater to small groups. We have a flexible experience for groups of all sizes.
           </p>
         </article>
       </div>
@@ -26,7 +26,7 @@
           <h1 class="f4 mt0">Corporate groups</h1>
           <hr class="mw3 ml0 ba bw1 b--orange">
           <p class="lh-copy measure center f6 black-70">
-            Most escape rooms are designed for friend groups not corporate groups. Our rooms are designed to challenge corporate groups who are more accustomed to working together.
+            Our escape rooms are designed to challenge corporate groups with specific challenges to foster problem solving, cooperation, and team building.
           </p>
         </article>
       </div>
