--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -4,7 +4,7 @@
     <div class="container-fluid tc-l pt4 pt5-ns pt6-l">
       <h1 class="f2 f1-l fw2 white-90 mb0 lh-title">Escape rooms brought directly to your corporate event.</h1>
       <h2 class="fw1 f3 white-80 mt3 mb4">It takes less than 60 minutes to break down barriers, build trust and bring your team together.</h2>
-      <a class="f6 lh-solid no-underline grow dib v-mid bg-orange white ba b--orange ph3 pv3 mb3" href="/team-building/">Discover the benefits</a>
+      <!-- <a class="f6 lh-solid no-underline grow dib v-mid bg-orange white ba b--orange ph3 pv3 mb3" href="/team-building/">Discover the benefits</a> -->
     </div>
   </div>
 </div>
