--- a/_assets/css/partials/custom.css
+++ b/_assets/css/partials/custom.css
@@ -9,11 +9,11 @@
 }
 
 .b--orange {
-  border-color: #fd7e14;
+  border-color: var(--orange);
 }
 
 .bg-orange {
-  background-color: #fd7e14;
+  background-color: var(--orange);
 }
 
 @media only screen and (min-width: 60em) {
@@ -30,18 +30,8 @@
   height: 24rem;
 }
 
-nav a.active::after {
-  background-image: linear-gradient(to right, #1de9b6, #2979ff);
-  bottom: 0;
-  content: '';
-  height: 4px;
-  left: 0;
-  position: absolute;
-  width: 100%;
-}
-
 .article a {
-  color: #3C3E55;
+  color: var(--blue);
   text-decoration: none;
 
   &,
@@ -65,27 +55,12 @@ nav a.active::after {
   text-transform: uppercase;
 
   &::after {
-    border: solid 2px #3C3E55;
+    border: solid 2px var(--blue);
     content: " ";
     display: block;
     margin: 25px auto;
     width: 35px;
   }
-}
-
-.feature-icon {
-  --icon-size: 100px;
-  border-radius: 50%;
-  display: block;
-  font-size: calc(var(--icon-size) / 3);
-  height: var(--icon-size);
-  line-height: var(--icon-size);
-  margin: 0 auto 50px;
-  max-width: 100%;
-  position: relative;
-  text-align: center;
-  vertical-align: middle;
-  width: var(--icon-size);
 }
 
 .sr-only {
@@ -108,25 +83,6 @@ nav a.active::after {
   margin-bottom: .5rem;
   text-align: center;
   width: 40px;
-}
-
-.badge {
-  display: inline-block;
-  min-width: 10px;
-  padding: 3px 7px;
-  font-size: 12px;
-  font-weight: bold;
-  line-height: 1;
-  color: #fff;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: baseline;
-  background-color: #999;
-  border-radius: 10px;
-
-  &:empty {
-    display: none;
-  }
 }
 
 .img-responsive {
