--- a/_includes/why.html
+++ b/_includes/why.html
@@ -1,4 +1,12 @@
 <div class="container-fluid pv4">
   <h2 class="f1 lh-title tc">Why Escape On Demand?</h2>
 
+  <p>Escape On Demand is the only escape room establishment that can handle groups in excess of 40 people at one time. We can have over 100 people go through our escape rooms in a little over 1-hour and we offer the added benefit of coming to you. Escape On Demand is the only event hosting company offering real escape rooms. Other team building activities do not offer the same level of interactive, entertaining, and satisfying experience. Your office will be talking long after the event about the unique puzzles they solved. We offer 4 unique room themes so attendees can return and receive a different experience.</p>
+  <p>Escape rooms offer cooperation and team building opportunities. Teams must work together in order to make it out in time. Solving these puzzles also comes with a great sense of satisfaction that your group will be talking about long after the event.</p>
+
+  <!--
+  <p>We consistently focus on the unexpected. That’s why we’ve never been afraid to reinvent ourselves. We’re a company that embraces change — our success is the product of our talented employees taking big risks. What has stayed the same for the last 160 years, is our dedication to outstanding customer service and the values on which American Express was built: trust, security, integrity, quality, respect and customer commitment.</p>
+
+  <p>We’re proud to be collaborators, problem solvers and risk-takers. No business challenge is too big, and no customer request too small. Talk to our people — and experience firsthand their passion, curiosity and excitement about the work they get to do every single day.</p>
+  -->
 </div>
