--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
-<header id="header" class="sans-serif fixed-ns top-0 w-100 bg-white shadow-1 z-max">
+<header class="bg-white">
   <div class="container-fluid">
     <nav class="dt w-100">
       <div class="dtc w2 v-mid pv2 pr2">
-        <a href="{{ site.baseurl }}/" class="dib w4 border-box bg-white" title="Back to Homepage">
+        <a href="{{ site.baseurl }}/" class="dib w4" title="Back to Homepage">
           <img src="{{ site.logo }}" class="img-responsive" alt="Escape On Demand logo">
           <span class="dn link white-90 hover-white">Escape On Demand</span>
         </a>
