--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     {% include head.html %}
   </head>
-  <body class="{{ page.slug }} sans-serif near-black bg-near-white pt5-m pt5-l">
+  <body class="{{ page.slug }} sans-serif near-black bg-near-white">
     {% include header.html %}
     {{ content }}
     {% include footer.html %}
