Update copy line heights

--- a/_layouts/room.html
+++ b/_layouts/room.html
@@ -11,7 +11,7 @@ layout: default
   </div>
 </section>
 
-<section class="pv5">
+<section class="pt4 pb6">
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-sm-8">
