--- a/_includes/rooms.html
+++ b/_includes/rooms.html
@@ -1,5 +1,5 @@
 <div class="container-fluid pv4">
-  <h2 class="f1 lh-title tc mt0">Our Escape Rooms</h2>
+  <h2 class="f1 lh-title mt0 tc">Our Escape Rooms.</h2>
 
   <ul class="list pl0 row">
     {% for room in site.rooms reversed %}
