Add contact to navigation. comment out phone num

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
       </a>
     </p>
 
-    <p class="mt1 mb0 mid-gray">(702) 555-5555</p>
+    <!-- <p class="mt1 mb0 mid-gray">(702) 555-5555</p> -->
     <p class="mv0">
       <a href="mailto:events@escapeondemand.com" class="link mid-gray hover-secondary">events@escapeondemand.com</a>
     </p>
