--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
       <div class="dtc v-mid tr pv2 pl2">
         <!-- <a class="f6 fw4 hover-black no-underline black-70 dib pv2 ph3 {% if page.slug == 'team-building' %}black{% endif %}" href="{{ site.base_url }}/team-building/">Team Building</a> -->
         <a class="f6 fw4 hover-black no-underline black-70 dib pv2 ph3 {% if page.slug == 'rooms' %}black{% endif %}" href="{{ site.base_url }}/rooms/">Rooms</a>
-        <!-- <a class="f6 fw4 hover-black no-underline black-70 dib pv2 ph3 {% if page.slug == 'contact' %}black{% endif %}" href="{{ site.base_url }}/contact/">Request a Quote</a> -->
+        <a class="f6 fw4 hover-black no-underline black-70 dib pv2 ph3 {% if page.slug == 'contact' %}black{% endif %}" href="{{ site.base_url }}/contact/">Contact Us</a>
       </div>
     </nav>
   </div>
