Break css into partials

--- a/_assets/css/main.css
+++ b/_assets/css/main.css
@@ -11,4 +11,7 @@
 
 /*! Main CSS */
 /** Components */
+@import "partials/settings.css";
+@import "partials/theme.css";
 @import "partials/custom.css";
+@import "partials/utilities.css";
