Use liquid comment to prevent output of unpublished copy

--- a/_includes/benefits.html
+++ b/_includes/benefits.html
@@ -30,7 +30,9 @@
           </p>
         </article>
       </div>
-<!--
+
+      {% comment %}
+      <!--
       <div class="col-xs-12 col-sm-4 mv2 mv3-ns">
         <article class="center bg-white pa3 pa4-ns ba b--black-10 h-100">
           <h1 class="f4 mt0">We come to you</h1>
@@ -50,7 +52,8 @@
           </p>
         </article>
       </div>
--->
+      -->
+      {% endcomment %}
     </div>
   </div>
 </section>
