--- a/_includes/definition.html
+++ b/_includes/definition.html
@@ -1,23 +1,27 @@
 <div class="container-fluid pt4 pb5">
-  <h2 class="f1 lh-title mt0 tc">What is an Escape Room?</h2>
-  <div class="lh-copy">
-    <p>An escape room is a physical adventure game in which players solve a series of puzzles using clues, hints, and strategy to complete the objectives at hand. Players are given a 60 minute time limit to unveil the secret plot and escape. All information needed to solve the room is found within and can be inferred with logic and deductions. Teams must work together and bounce ideas off each other if they want to make it out in time.</p>
+  <div class="mw8 center">
+    <h2 class="f1 lh-title mt0 tc">What is an Escape Room?</h2>
+    <div class="f4 lh-copy">
+      <p>An escape room is a physical adventure game in which players solve a series of puzzles using clues, hints, and strategy to complete the objectives at hand. Players are given a 60 minute time limit to unveil the secret plot and escape. All information needed to solve the room is found within and can be inferred with logic and deductions. Teams must work together and bounce ideas off each other if they want to make it out in time.</p>
 
-    <!--
-    <ul>
-      <li>Get locked in a real-life escape room with friends and co-workers.</li>
-      <li>Four different themes with a backstory to set the tone for the adventure.</li>
-      <li>Use items in the room and solve puzzles to progress through the room.</li>
-      <li>You have 60 minutes to solve everything and escape the room.</li>
-    </ul>
-    <p>Escape rooms are CAPTIVATING REAL-LIFE ADVENTURE EXPERIENCES where teams of 3-8 PLAYERS are put in a custom themed room with a scenario, and given 60 MINUTES to escape. The rooms are best suited for players AGES 12+, and teams must work together collaboratively to escape by using elements of the room to solve a series of puzzles.</p>
-    <p>Puzzles at Locked Room Omaha require a variety of different skill sets and can be broadly categorized into three different groups:</p>
-    <ol>
-      <li>LOGIC PUZZLES: Using your brain to problem solve things like patterns or putting items in a sequential order or direction.</li>
-      <li>PHYSICAL PUZZLES: Physically interacting with the room itself by touching, moving, lifting, opening, pushing, pulling, etc.</li>
-      <li>SEARCHING PUZZLES: Visually investigating your surroundings – not necessarily needing to move anything physically.</li>
-    </ol>
-    <p>No experience is necessary, just come with a positive mindset and be prepared to THINK OUTSIDE THE BOX!</p>
-    -->
+      {% comment %}
+      <!--
+      <ul>
+        <li>Get locked in a real-life escape room with friends and co-workers.</li>
+        <li>Four different themes with a backstory to set the tone for the adventure.</li>
+        <li>Use items in the room and solve puzzles to progress through the room.</li>
+        <li>You have 60 minutes to solve everything and escape the room.</li>
+      </ul>
+      <p>Escape rooms are CAPTIVATING REAL-LIFE ADVENTURE EXPERIENCES where teams of 3-8 PLAYERS are put in a custom themed room with a scenario, and given 60 MINUTES to escape. The rooms are best suited for players AGES 12+, and teams must work together collaboratively to escape by using elements of the room to solve a series of puzzles.</p>
+      <p>Puzzles at Locked Room Omaha require a variety of different skill sets and can be broadly categorized into three different groups:</p>
+      <ol>
+        <li>LOGIC PUZZLES: Using your brain to problem solve things like patterns or putting items in a sequential order or direction.</li>
+        <li>PHYSICAL PUZZLES: Physically interacting with the room itself by touching, moving, lifting, opening, pushing, pulling, etc.</li>
+        <li>SEARCHING PUZZLES: Visually investigating your surroundings – not necessarily needing to move anything physically.</li>
+      </ol>
+      <p>No experience is necessary, just come with a positive mindset and be prepared to THINK OUTSIDE THE BOX!</p>
+      -->
+      {% endcomment %}
+    </div>
   </div>
 </div>
