Add faq and update layouts

--- a/_includes/benefits.html
+++ b/_includes/benefits.html
@@ -5,7 +5,7 @@
         <article class="center bg-white pa3 pa4-ns ba b--black-10 h-100">
           <h1 class="f4 mt0">Team Building</h1>
           <hr class="mw3 ml0 ba bw1 b--secondary">
-          <p class="lh-copy measure center f6 black-70">
+          <p class="lh-copy f6 black-70">
             Employees learn to work together more effectively and increase productivity. Boost team confidence and trust, increasing motivation in the workplace. Out-of-the-ordinary tasks will encourage creativity and foster problem solving that can help identify and overcome barriers to goals on the job.
           </p>
         </article>
@@ -15,7 +15,7 @@
         <article class="center bg-white pa3 pa4-ns ba b--black-10 h-100">
           <h1 class="f4 mt0">Groups of any size</h1>
           <hr class="mw3 ml0 ba bw1 b--secondary">
-          <p class="lh-copy measure center f6 black-70">
+          <p class="lh-copy f6 black-70">
             The typical escape room has a limited capacity which can only cater to small groups. We have a flexible experience for groups of all sizes.
           </p>
         </article>
@@ -25,7 +25,7 @@
         <article class="center bg-white pa3 pa4-ns ba b--black-10 h-100">
           <h1 class="f4 mt0">Corporate groups</h1>
           <hr class="mw3 ml0 ba bw1 b--secondary">
-          <p class="lh-copy measure center f6 black-70">
+          <p class="lh-copy f6 black-70">
             Our escape rooms are designed to challenge corporate groups with specific challenges to foster problem solving, cooperation, and team building.
           </p>
         </article>
@@ -37,7 +37,7 @@
         <article class="center bg-white pa3 pa4-ns ba b--black-10 h-100">
           <h1 class="f4 mt0">We come to you</h1>
           <hr class="mw3 ml0 ba bw1 b--secondary">
-          <p class="lh-copy measure center f6 black-70">
+          <p class="lh-copy f6 black-70">
             There's no need to arrange transportation for your group and find a day/time that works for everyone. We'll come directly to your event and
           </p>
         </article>
@@ -47,7 +47,7 @@
         <article class="center bg-white pa3 pa4-ns ba b--black-10 h-100">
           <h1 class="f4 mt0">Challenging but achievable</h1>
           <hr class="mw3 ml0 ba bw1 b--secondary">
-          <p class="lh-copy measure center f6 black-70">
+          <p class="lh-copy f6 black-70">
             We firmly believe that rooms should be challenging, but achievable. It is important for each room design to challenge groups and make them think outside the box while balancing the ability to escape in the hour.
           </p>
         </article>
