--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,14 @@
 <header class="bg-white">
   <div class="container-fluid">
     <nav class="dt w-100">
-      <div class="dtc w2 v-mid pv2 pr2">
+      <div class="dtc v-mid pv2 pr2">
         <a href="{{ site.baseurl }}/" class="dib w4" title="Back to Homepage">
-          <img src="{{ site.logo }}" class="img-responsive" alt="Escape On Demand logo">
-          <span class="dn link white-90 hover-white">Escape On Demand</span>
+          {% include logo.html %}
         </a>
       </div>
       <div class="dtc v-mid tr pv2 pl2">
-        <!-- <a class="f6 fw4 hover-black no-underline black-70 dib pv2 ph3 {% if page.slug == 'team-building' %}black{% endif %}" href="{{ site.base_url }}/team-building/">Team Building</a> -->
         <a class="f6 fw4 hover-black no-underline black-70 dib pv2 ph3 {% if page.slug == 'rooms' %}black{% endif %}" href="{{ site.base_url }}/rooms/">Rooms</a>
+        <a class="f6 fw4 hover-black no-underline black-70 dib pv2 ph3 {% if page.slug == 'team-building' %}black{% endif %}" href="{{ site.base_url }}/faq/">FAQ</a>
         <a class="f6 fw4 hover-black no-underline black-70 dib pv2 ph3 {% if page.slug == 'contact' %}black{% endif %}" href="{{ site.base_url }}/contact/">Contact Us</a>
       </div>
     </nav>
