--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,9 +2,12 @@
 layout: default
 ---
 
-<section class="pv5">
+<div class="bg-light-gray pv2 bt bb b--black-10">
   <div class="container-fluid">
-    <h2 class="f2 mt0">{{ page.title }}</h2>
-    {{ content }}
+    <h1 class="f3">{{ page.title }}</h1>
   </div>
-</section>
+</div>
+
+<div class="pv4">
+  {{ content }}
+</div>
