--- a/_layouts/room.html
+++ b/_layouts/room.html
@@ -3,11 +3,9 @@ layout: default
 ---
 
 <section class="overflow-hidden room cover {% cycle 'room--odd', 'room--even' %}" style="background-image: url({{ site.base_url }}/assets/img/rooms/{{ page.image }})">
-  <div class="container-fluid pv6 bg-black-40 vh-75">
-    <div class="w-50-l">
-      <h2 class="f3 lh-copy white">{{ page.teaser }}</h2>
-      <h3 class="f-subheadline lh-solid mv4 white">{{ page.title }}</h3>
-    </div>
+  <div class="container-fluid pv4 pv5-ns pv6-l bg-black-40 vh-75-ns">
+    <h2 class="f5 f4-ns lh-copy white w-60-l">{{ page.teaser }}</h2>
+    <h3 class="f1 f-subheadline-m f-subheadline-l lh-title lh-solid-ns mv4 white">{{ page.title }}</h3>
   </div>
 </section>
 
