Update homepage content

--- a/_includes/benefits.html
+++ b/_includes/benefits.html
@@ -6,14 +6,14 @@
           <h1 class="f4 mt0">Team Building</h1>
           <hr class="mw3 ml0 ba bw1 b--secondary">
           <p class="lh-copy f6 black-70">
-            Employees learn to work together more effectively and increase productivity. Boost team confidence and trust, increasing motivation in the workplace. Out-of-the-ordinary tasks will encourage creativity and foster problem solving that can help identify and overcome barriers to goals on the job.
+            Employees learn to work together more effectively and increase productivity. Out-of-the-ordinary tasks will encourage creativity and foster problem solving that can help identify and overcome barriers to goals on the job.
           </p>
         </article>
       </div>
 
       <div class="col-xs-12 col-sm-4 mv2 mv3-ns">
         <article class="center bg-white pa3 pa4-ns ba b--black-10 h-100">
-          <h1 class="f4 mt0">Groups of any size</h1>
+          <h1 class="f4 mt0">Flexible Group Sizes</h1>
           <hr class="mw3 ml0 ba bw1 b--secondary">
           <p class="lh-copy f6 black-70">
             The typical escape room has a limited capacity which can only cater to small groups. We have a flexible experience for groups of all sizes.
@@ -23,10 +23,10 @@
 
       <div class="col-xs-12 col-sm-4 mv2 mv3-ns">
         <article class="center bg-white pa3 pa4-ns ba b--black-10 h-100">
-          <h1 class="f4 mt0">Corporate groups</h1>
+          <h1 class="f4 mt0">Corporate Groups</h1>
           <hr class="mw3 ml0 ba bw1 b--secondary">
           <p class="lh-copy f6 black-70">
-            Our escape rooms are designed to challenge corporate groups with specific challenges to foster problem solving, cooperation, and team building.
+            Our escape rooms are designed to challenge corporate groups through problem solving, cooperation, and team building.
           </p>
         </article>
       </div>
