Update the why content

--- a/_includes/why.html
+++ b/_includes/why.html
@@ -3,8 +3,9 @@
     <h2 class="f1 lh-title mt0 tc">Why Escape On Demand?</h2>
 
     <div class="f4 lh-copy">
-      <p>Escape On Demand is the only escape room establishment that can handle groups in excess of 40 people at one time. We can have over 150 people go through our escape rooms in a single session and we offer the added benefit of coming to you. Escape On Demand is the only event hosting company offering real escape rooms. Other team building activities do not offer the same level of interactive, entertaining, and satisfying experience. Your office will be talking long after the event about the unique puzzles they solved. We offer 4 unique room themes so attendees can return and receive a different experience.</p>
-      <p>Escape rooms offer cooperation and team building opportunities. Teams must work together in order to make it out in time. Solving these puzzles also comes with a great sense of satisfaction that your group will be talking about long after the event.</p>
+      <p>Escape On Demand is the only escape room establishment that can handle groups in excess of 40 people at one time. We can have over 150 people go through our escape rooms in a single session and we offer the added benefit of coming to you. Escape On Demand is the only event hosting company offering real escape rooms. Other team building activities do not offer the same level of interactive, entertaining, and satisfying experience. We offer 4 unique room themes so attendees can return and receive a different experience.</p>
+
+      <p>Escape rooms offer cooperation and team building opportunities. Teams must work together in order to make it out in time. Solving these unique puzzles also comes with a great sense of satisfaction that your group will be talking about long after the event.</p>
 
       {% comment %}
       <!--
