Update page layouts, footer and section bgs

--- a/_includes/why.html
+++ b/_includes/why.html
@@ -1,4 +1,4 @@
-<div class="container-fluid pt4 pb5">
+<div class="container-fluid pv5 bg-near-white">
   <div class="mw8 center">
     <h2 class="f1 lh-title mt0 tc">Why Escape On Demand?</h2>
 
