--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,12 +2,12 @@
 layout: default
 ---
 
-<div class="bg-light-gray pv2 bt bb b--black-10">
+<div class="pv4">
   <div class="container-fluid">
-    <h1 class="f3">{{ page.title }}</h1>
+    <h1 class="f2 mv0">{{ page.title }}</h1>
   </div>
 </div>
 
-<div class="pv4">
+<div class="pb4">
   {{ content }}
 </div>
