--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,9 +1,9 @@
-<div class="bg-primary white">
+<div class="bg-near-white">
   <div class="container-fluid pt1 pb5">
     <div class="ph5 mw7 center">
       <h2 class="f-subheadline lh-title mb4">Let's get to work.</h2>
       <p class="f3 lh-copy"><strong>Have an upcoming conference or event?</strong> We'd love to hear about it.</p>
-      <p class="tc"><a href="{{ site.base_url }}/contact/" class="dib mt3 ttu link white hover-primary ba b--white hover-bg-white pa3">Contact Us <span class="dib ml3">&#8594;</span></a></p>
+      <p class="tc"><a href="{{ site.base_url }}/contact/" class="dib mt3 ttu link primary hover-white hover-bg-primary b--primary ba pa3">Contact Us <span class="dib ml3">&#8594;</span></a></p>
     </div>
   </div>
 </div>
