Update homepage copy

--- a/_includes/benefits.html
+++ b/_includes/benefits.html
@@ -1,59 +1,35 @@
-<section class="pv3 benefits">
+<section class="pt4 pb5 benefits">
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-sm-4 mv2 mv3-ns">
         <article class="center bg-white pa3 pa4-ns ba b--black-10 h-100">
-          <h1 class="f4 mt0">Team Building</h1>
+          <h3 class="f4 mt0">Effective Team Building</h3>
           <hr class="mw3 ml0 ba bw1 b--secondary">
           <p class="lh-copy f6 black-70">
-            Employees learn to work together more effectively and increase productivity. Out-of-the-ordinary tasks will encourage creativity and foster problem solving that can help identify and overcome barriers to goals on the job.
+            Teams will be challenged with out-of-the-ordinary tasks that encourage collaboration, creativity, and problem solving. The experience will help identify and overcome barriers to being an effective and productive team.
           </p>
         </article>
       </div>
 
       <div class="col-xs-12 col-sm-4 mv2 mv3-ns">
         <article class="center bg-white pa3 pa4-ns ba b--black-10 h-100">
-          <h1 class="f4 mt0">Flexible Group Sizes</h1>
+          <h3 class="f4 mt0">Flexible Group Sizes</h3>
           <hr class="mw3 ml0 ba bw1 b--secondary">
           <p class="lh-copy f6 black-70">
-            The typical escape room has a limited capacity which can only cater to small groups. We have a flexible experience for groups of all sizes.
+            Escape On Demand is the only establishment that can handle groups in excess of 40 people and we offer the added benefit of coming directly to you. We can even comfortably accommodate groups larger than 150!
           </p>
         </article>
       </div>
 
       <div class="col-xs-12 col-sm-4 mv2 mv3-ns">
         <article class="center bg-white pa3 pa4-ns ba b--black-10 h-100">
-          <h1 class="f4 mt0">Corporate Groups</h1>
+          <h3 class="f4 mt0">Themed Escape Rooms</h3>
           <hr class="mw3 ml0 ba bw1 b--secondary">
           <p class="lh-copy f6 black-70">
-            Our escape rooms are designed to challenge corporate groups through problem solving, cooperation, and team building.
+            Escape On Demand is the only event hosting company offering real escape rooms. Each room is designed to be interactive, entertaining, and fully immersive.
           </p>
         </article>
       </div>
-
-      {% comment %}
-      <!--
-      <div class="col-xs-12 col-sm-4 mv2 mv3-ns">
-        <article class="center bg-white pa3 pa4-ns ba b--black-10 h-100">
-          <h1 class="f4 mt0">We come to you</h1>
-          <hr class="mw3 ml0 ba bw1 b--secondary">
-          <p class="lh-copy f6 black-70">
-            There's no need to arrange transportation for your group and find a day/time that works for everyone. We'll come directly to your event and
-          </p>
-        </article>
-      </div>
-
-      <div class="col-xs-12 col-sm-4 mv2 mv3-ns">
-        <article class="center bg-white pa3 pa4-ns ba b--black-10 h-100">
-          <h1 class="f4 mt0">Challenging but achievable</h1>
-          <hr class="mw3 ml0 ba bw1 b--secondary">
-          <p class="lh-copy f6 black-70">
-            We firmly believe that rooms should be challenging, but achievable. It is important for each room design to challenge groups and make them think outside the box while balancing the ability to escape in the hour.
-          </p>
-        </article>
-      </div>
-      -->
-      {% endcomment %}
     </div>
   </div>
 </section>
