--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 <meta name="author" content="{{ site.author }}">
-<meta name="theme-color" content="#3C3E55">
+<meta name="theme-color" content="#2a3649">
 <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
 <link rel="icon" href="{{ site.baseurl }}/assets/img/favicon_32x32.png" sizes="32x32" type="image/png">
 
