--- a/_includes/definition.html
+++ b/_includes/definition.html
@@ -2,7 +2,7 @@
   <div class="mw8 center">
     <h2 class="f1 lh-title mt0 tc">What is an Escape Room?</h2>
     <div class="f4 lh-copy">
-      <p>An escape room is a physical adventure game where teams of 3-8 players are put in a custom themed room and given 60 minutes to escape. Players must work together to find clues, solve puzzles, and decode hidden messages. The goal may be simple but the game is challenging and will push your team to the limits.</p>
+      <p>An escape room is a physical adventure game where teams of 3-8 players are put in a themed room and given 60 minutes to escape. Players must work together to find clues, solve puzzles, and decode hidden messages. The goal may be simple but the game is challenging and will push your team to the limit.</p>
     </div>
   </div>
 </div>
