--- a/_assets/css/partials/settings.css
+++ b/_assets/css/partials/settings.css
@@ -1,4 +1,69 @@
+/* Coolors Palette - coolors.co/ffffff-e8e8e8-fd7e14-2a3649-353535 */
 :root {
-  --blue: #2a3649;
+  --white: #ffffff;
+  --gray: #e8e8e8;
+  /* hsla(0%, 0%, 91%, 1); */
+  /* rgba(232, 232, 232, 1); */
   --orange: #fd7e14;
+  /* hsla(27%, 98%, 54%, 1); */
+  /* rgba(253, 126, 20, 1); */
+  --blue: #2a3649;
+  /* hsla(217%, 27%, 23%, 1); */
+  /* rgba(42, 54, 73, 1); */
+  --black: #353535;
+  /* hsla(0%, 0%, 21%, 1); */
+  /* rgba(53, 53, 53, 1); */
+
+  /* Palette color codes */
+  /* Palette URL: http://paletton.com/#uid=70u0u0ktuvK00++dtIwHHia+T02 */
+
+  /* As hex codes */
+  --color-primary-0: #FD7E14;  /* Main Primary color */
+  --color-primary-1: #FFFFFF;
+  --color-primary-2: #FFC494;
+  --color-primary-3: #914200;
+  --color-primary-4: #000000;
+
+  --color-secondary-1-0: #FDAF14;  /* Main Secondary color (1) */
+  --color-secondary-1-1: #FFFFFF;
+  --color-secondary-1-2: #FFDB94;
+  --color-secondary-1-3: #916000;
+  --color-secondary-1-4: #000000;
+
+  --color-secondary-2-0: #1E48A9;  /* Main Secondary color (2) */
+  --color-secondary-2-1: #FFFFFF;
+  --color-secondary-2-2: #8198CE;
+  --color-secondary-2-3: #062261;
+  --color-secondary-2-4: #000000;
+
+  --color-complement-0: #0C9898; /* Main Complement color */
+  --color-complement-1: #FFFFFF;
+  --color-complement-2: #72C4C4;
+  --color-complement-3: #005757;
+  --color-complement-4: #000000;
+
+  /* As RGBa codes */
+  --rgba-primary-0: rgba(253,126, 20,1); /* Main Primary color */
+  --rgba-primary-1: rgba(255,255,255,1);
+  --rgba-primary-2: rgba(255,196,148,1);
+  --rgba-primary-3: rgba(145, 66,  0,1);
+  --rgba-primary-4: rgba(  0,  0,  0,1);
+
+  --rgba-secondary-1-0: rgba(253,175, 20,1); /* Main Secondary color (1) */
+  --rgba-secondary-1-1: rgba(255,255,255,1);
+  --rgba-secondary-1-2: rgba(255,219,148,1);
+  --rgba-secondary-1-3: rgba(145, 96,  0,1);
+  --rgba-secondary-1-4: rgba(  0,  0,  0,1);
+
+  --rgba-secondary-2-0: rgba( 30, 72,169,1); /* Main Secondary color (2) */
+  --rgba-secondary-2-1: rgba(255,255,255,1);
+  --rgba-secondary-2-2: rgba(129,152,206,1);
+  --rgba-secondary-2-3: rgba(  6, 34, 97,1);
+  --rgba-secondary-2-4: rgba(  0,  0,  0,1);
+
+  --rgba-complement-0: rgba( 12,152,152,1);  /* Main Complement color */
+  --rgba-complement-1: rgba(255,255,255,1);
+  --rgba-complement-2: rgba(114,196,196,1);
+  --rgba-complement-3: rgba(  0, 87, 87,1);
+  --rgba-complement-4: rgba(  0,  0,  0,1);
 }
